--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-transition-group": "~2.2.1"
+    "react-transition-group": "~2.2.1",
+    "serve": "~6.4.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
@@ -14,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-start": "serve --single ./build"
   }
 }
