--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "~4.2.2",
     "react-transition-group": "~2.2.1",
     "serve": "~6.4.1"
   },
